# blobs_learner

./: CMakeLists.txt  README.md
include/: FileReader.h
misc/: blob.cnf  blob2.cnf  gather.sh  run.sh
src/: BlobsLearner  BlobsLearner.cpp  BlobsLearner2  BlobsLearner2.cpp  FileReader.cpp  Makefile  SamplesGathering  WeightsFinder  WeightsFinder.cpp  gather.cpp  tools.cpp
test1/: blob2.cnf  blob2.cnf~  samples.txt  test.txt
test2/: samples.txt  test.txt
